--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
-    "@react-three/drei": "^10.0.5",
-    "@react-three/fiber": "^9.1.0",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
@@ -21,8 +19,7 @@
     "react-dom": "^18.3.1",
     "react-slick": "^0.30.3",
     "react-type-animation": "^3.2.0",
-    "slick-carousel": "^1.8.1",
-    "three": "^0.175.0"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
